syntax = "proto3";
package com.panelsw.ca;
option optimize_for = LITE_RUNTIME;

enum ErrorHandling {
	fail = 0;
	ignore = 1;
	prompt = 2;
	promptAlways = 3; // Prompt even if exit code and stdout were ok
}
